--- a/Quack/templates/CodeQuacker.html
+++ b/Quack/templates/CodeQuacker.html
@@ -4,73 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Login - Insta485</title>
+    <title>CodeQuacker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-
-        .big_box {
-            height: auto;
-            border-radius: 15px;
-            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 70vh;
-            margin-right: 50px;
-            margin-top: 50px;
-            margin-left: 50px;
-            background-color: white;
-            padding: 20px;
-        }
-
-        .small_box {
-            height: auto;
-            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-            flex-direction: column;
-            margin-right: 50px;
-            margin-bottom: 50px;
-            margin-left: 50px;
-            background-color: rgb(149, 149, 149);
-            height: auto;
-            color: black;
-            align-items: center;
-        }
-
-        .small_box i {
-            font-size: 24px;
-            cursor: pointer;
-            float: left;
-        }
-        
-        .microphone{
-            /* position:relative; */
-            margin-left: 5px;
-            float:right;
-        }
-        
-        .navbar {
-            background-color: #F8D586;
-        }
-
-        li {
-            margin-right: 30px;
-        }
-
-        .login {
-            color: #000;               /* Darker text color for contrast */
-            text-align: center;
-        }
-
-        .login a {
-            color: #000;               /* Ensures the link text is black */
-            text-decoration: none;     /* Removes underline from link */
-        }
-    </style>
+integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel = "stylesheet" href = "../static/css/style.css">
+    
     
 </head>
 <body style = "background-color: #FFF0CE;">
@@ -109,15 +47,25 @@
 
   <section id="main">
     <div class="card big_box">
-      <div class="card-body">
-        Generating answer...
-      </div>
+        <div class="card-body" id="ai-response">
+            Generating answer...
+        </div>
     </div>
+
     <div class="card small_box">
-      <span>Type your question here...</span>
-      <i class="fa fa-microphone microphone"></i>
+        <p class="question-text">Type your question here...</p>
+        <i class="fa fa-microphone microphone" id="microphone-btn"></i>
     </div>
-  </section>
+
+    <!-- Sound wave bar -->
+    <canvas id="sound-wave"></canvas>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+
    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
