--- a/Quack/templates/loginPage.html
+++ b/Quack/templates/loginPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Insta485</title>
+    <title>quack! Login</title>
     <style>
         body {
             font-family: Arial, sans-serif;
