index title screen

--- a/Quack/templates/index.html
+++ b/Quack/templates/index.html
@@ -241,7 +241,8 @@ footer {
     </div>
 
     <div class = "center">
-        <p class = "index_paragraph">Welcome to Rubber Ducky Learning, where explaining your problems is the key to solving them!</p>
+        <p class = "index_paragraph">With CodeQuacker by quack!, explaining your coding problems is the key to solving them! 
+        </p>
     </div>
   
     
