--- a/Quack/templates/Lessons.html
+++ b/Quack/templates/Lessons.html
@@ -122,9 +122,9 @@
   <section id="navbar">
     <nav class="navbar navbar-expand-md">
         <div class="container-fluid px-3">
-            <a id="head" class="navText navbar-brand" aria-current="page" href="./index.html">
+            <a id="head" class="navText navbar-brand" aria-current="page" href="/">
                 <img class="logo" src="../static/images/logo.png" width="60" height="60" />
-                <a style="text-decoration: none; color: black" href="./index.html">quack!</a>
+                <a style="text-decoration: none; color: black" href="/">quack!</a>
             </a>
             <button id="toggle" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"> </span>
