--- a/Quack/templates/Lessons.html
+++ b/Quack/templates/Lessons.html
@@ -7,8 +7,11 @@
     <title>Lessons - quack!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+
+        /* Apply Fredoka font to all text */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Fredoka', sans-serif;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
