--- a/Quack/templates/loginPage.html
+++ b/Quack/templates/loginPage.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Insta485</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -72,8 +74,50 @@
         .signup-link a:hover {
             text-decoration: underline;
         }
+
+        .navbar {
+    background-color: #F8D586;
+    border-bottom: 2px solid #000000;
+    /* padding: 10px 0;  */
+      display: flex;
+      /* justify-content: left; */
+      background-color: #F8D586;
+      padding: 10px;
+    }
+
+    div.container-fluid.px-3{
+        justify-content: left;
+    }
+
+    .navbar-left {
+      display: flex;
+    }
+
+    .navbar-left a {
+      margin-right: 20px;
+      text-decoration: none;
+      color: black;
+    }
+
+
+       
     </style>
 </head>
+
+<header>
+    <section id="navbar">
+        <!-- navbar-expand-md -->
+    <nav class = "navbar fixed-top me-auto navbar-left">
+    <div class = "container-fluid px-3">
+        <a id = "head" class = "navText navbar-brand" aria-current="page" href="./index.html">
+          <img class = "logo" src = "../static/images/logo.png" width = "60" height = "60" />
+          <a style = "text-decoration: none; color: black" href="./index.html">quack!</a>
+        </a>
+      </div>
+    </nav>
+</header>
+
+
 <body>
     <div class="login-container">
         <div class="logo">
