--- a/Quack/templates/index.html
+++ b/Quack/templates/index.html
@@ -13,6 +13,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 
   /* Apply Fredoka font to all text */
+  header{ font-family: 'Fredoka', sans-serif;
+  }
+  
   body {
     font-family: 'Fredoka', sans-serif;
     background-color: #FFEEC8;
@@ -27,6 +30,7 @@
     background-color: #F8D586;
     border-bottom: 2px solid #000000;
     padding: 10px 0; /* Add padding if needed */
+    height: 88px;
   }
 
   #navbar {
