--- a/Quack/templates/createAccount.html
+++ b/Quack/templates/createAccount.html
@@ -82,7 +82,7 @@
         </div>
 
         <!-- Sign-up Form -->
-        <form action="/accounts/create/" method="post" enctype="multipart/form-data" class="signup-form">
+        <form action="/create/" method="post" enctype="multipart/form-data" class="signup-form">
             <input type="text" name="username" placeholder="Username" required/>
             <input type="email" name="email" placeholder="Email" required/>
             <input type="password" name="password" placeholder="Password" required/>
