--- a/Quack/templates/index.html
+++ b/Quack/templates/index.html
@@ -217,7 +217,7 @@ footer {
               <a class="nav-link align-content-center" href="../templates/CodeQuacker.html">CodeQuaker</a>
             </li>
             <li class = "login card container-fluid" style="background-color: #FFF0CE">
-              <a class="nav-link align-content-center" href="../templates/loginPage.html" >log in</a>
+              <a class="nav-link align-content-center" href="/loginPage" >log in</a>
             </li>
           </ul>
         </div>
