--- a/Quack/templates/index.html
+++ b/Quack/templates/index.html
@@ -189,7 +189,7 @@
       <div class="container-fluid px-3">
         <a id="head" class="navText navbar-brand" aria-current="page" href="./index.html">
           <img class="logo" src="../static/images/logo.png" width="60" height="60" />
-          <a style="text-decoration: none; color: black" href="./index.html">quack!</a>
+          <a style="font-size: 20px; text-decoration: none; color: black" href="./index.html">quack!</a>
         </a>
         <button id="toggle" class="navbar-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -200,16 +200,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link align-content-center" href="../templates/Lessons.html">lessons</a>
+              <a class="nav-link align-content-center" href="../templates/Lessons.html">Lessons</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link align-content-center" href="#">notes</a>
+              <a class="nav-link align-content-center" href="#">Notes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link align-content-center" href="../templates/CodeQuacker.html">CodeQuacker</a>
             </li>
             <li class="login card container-fluid" style="background-color: #FFF0CE">
-              <a class="nav-link align-content-center" href="../templates/loginPage.html">log in</a>
+              <a class="nav-link align-content-center" href="../templates/loginPage.html">Log in</a>
             </li>
           </ul>
         </div>
