--- a/Quack/templates/Lessons.html
+++ b/Quack/templates/Lessons.html
@@ -256,7 +256,7 @@
         <div class="container-fluid px-3">
             <a id="head" class="navText navbar-brand" aria-current="page" href="/">
                 <img class="logo" src="../static/images/logo.png" width="60" height="60" />
-                <a style="text-decoration: none; color: black" href="/">quack!</a>
+                <a style="font-size: 20px; text-decoration: none; color: black" href="./index.html">quack!</a>
             </a>
             <button id="toggle" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"> </span>
@@ -265,7 +265,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link align-content-center" href="../Locked Page/lockPage.html">lessons</a>
+                        <a class="nav-link align-content-center" href="./index.html">lessons</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link align-content-center" href="#">notes</a></li>
