--- a/Quack/templates/Lessons.html
+++ b/Quack/templates/Lessons.html
@@ -265,15 +265,15 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link align-content-center" href="./index.html">lessons</a>
+                        <a class="nav-link align-content-center" href="#">Lessons</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link align-content-center" href="#">notes</a></li>
+                        <a class="nav-link align-content-center" href="#">Notes</a></li>
                     <li class="nav-item">
                         <a class="nav-link align-content-center" href="./CodeQuacker.html">CodeQuacker</a>
                     </li>
                     <li class="login login-card container-fluid">
-                        <a class="nav-link align-content-center" href="./loginPage.html">log in</a>
+                        <a class="nav-link align-content-center" href="./loginPage.html">Log in</a>
                     </li>
                 </ul>
             </div>
