--- a/Quack/templates/index.html
+++ b/Quack/templates/index.html
@@ -200,7 +200,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link align-content-center" href="../templates/Lessons.html">Lessons</a>
+              <a class="nav-link align-content-center" href="/Lessons/">Lessons</a>
             </li>
             <li class="nav-item">
               <a class="nav-link align-content-center" href="#">Notes</a>
