--- a/Quack/templates/createAccount.html
+++ b/Quack/templates/createAccount.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <title>Create Account - Insta485</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-=======
     <title>Create quack! Account</title>
->>>>>>> refs/remotes/origin/main
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -82,6 +80,7 @@
 
         .navbar {
     background-color: #F8D586;
+    height:88px;
     border-bottom: 2px solid #000000;
     /* padding: 10px 0;  */
       display: flex;
