--- a/Quack/templates/index.html
+++ b/Quack/templates/index.html
@@ -206,10 +206,10 @@
               <a class="nav-link align-content-center" href="#">Notes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link align-content-center" href="../templates/CodeQuacker.html">CodeQuacker</a>
+              <a class="nav-link align-content-center" href="/CodeQuaker/">CodeQuacker</a>
             </li>
             <li class="login card container-fluid" style="background-color: #FFF0CE">
-              <a class="nav-link align-content-center" href="../templates/loginPage.html">Log in</a>
+              <a class="nav-link align-content-center" href="/loginPage/">Log in</a>
             </li>
           </ul>
         </div>
