--- a/Quack/templates/CodeQuacker.html
+++ b/Quack/templates/CodeQuacker.html
@@ -95,7 +95,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="./Lessons.html">Lessons</a>
+              <a class="nav-link" href="./.html">Lessons</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Notes</a>
