--- a/Quack/templates/CodeQuacker.html
+++ b/Quack/templates/CodeQuacker.html
@@ -121,19 +121,19 @@
 
     <!-- Output Display Section -->
     <div class="card big_box">
-      <div class="card-body response-box" id="ai-response">
+      <div class="card-body response-box" id="ai-response" style = "font-family:'Courier New', Courier, monospace">
           <!-- Previous responses will appear here, and the loading animation will be appended at the bottom -->
       </div>
     </div>
 
     <!-- Input Form Section -->
     <div class="card big_box not_so_big">
-      <form id="input-form">
+      <form id="input-form" style = "font-family:'Fredoka', sans-serif; font-weight:normal;">
         <div class="mb-3">
           <label for="inputText" class="form-label">Enter your text:</label>
           <input type="text" class="form-control" id="inputText" name="input_text" required>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" style="margin-left: 45%;" class="btn btn-primary">Submit</button>
       </form> 
       <i class="fa fa-microphone microphone" id="microphone-btn"></i>
     </div>
