--- a/Quack/templates/Lessons.html
+++ b/Quack/templates/Lessons.html
@@ -256,7 +256,7 @@
         <div class="container-fluid px-3">
             <a id="head" class="navText navbar-brand" aria-current="page" href="/">
                 <img class="logo" src="../static/images/logo.png" width="60" height="60" />
-                <a style="font-size: 20px; text-decoration: none; color: black" href="./index.html">quack!</a>
+                <a style="font-size: 20px; text-decoration: none; color: black" href="/">quack!</a>
             </a>
             <button id="toggle" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"> </span>
@@ -270,10 +270,10 @@
                     <li class="nav-item">
                         <a class="nav-link align-content-center" href="#">Notes</a></li>
                     <li class="nav-item">
-                        <a class="nav-link align-content-center" href="./CodeQuacker.html">CodeQuacker</a>
+                        <a class="nav-link align-content-center" href="/CodeQuacker/">CodeQuacker</a>
                     </li>
                     <li class="login login-card container-fluid">
-                        <a class="nav-link align-content-center" href="./loginPage.html">Log in</a>
+                        <a class="nav-link align-content-center" href="/loginPage/">Log in</a>
                     </li>
                 </ul>
             </div>
