--- a/Quack/templates/loginPage.html
+++ b/Quack/templates/loginPage.html
@@ -110,9 +110,9 @@
         <!-- navbar-expand-md -->
     <nav class = "navbar fixed-top me-auto navbar-left">
     <div class = "container-fluid px-3">
-        <a id = "head" class = "navText navbar-brand" aria-current="page" href="./index.html">
+        <a id = "head" class = "navText navbar-brand" aria-current="page" href="/">
           <img class = "logo" src = "../static/images/logo.png" width = "60" height = "60" />
-          <a style = "text-decoration: none; color: black" href="./index.html">quack!</a>
+          <a style = "text-decoration: none; color: black" href="/">quack!</a>
         </a>
       </div>
     </nav>
@@ -135,7 +135,7 @@
 
         <!-- Sign-up link -->
         <div class="signup-link">
-            Don't have an account? <a href="createAccount.html">Sign up</a>
+            Don't have an account? <a href="/createAccount/">Sign up</a>
         </div>
     </div>
 </body>
