--- a/Quack/templates/CodeQuacker.html
+++ b/Quack/templates/CodeQuacker.html
@@ -89,7 +89,7 @@
   <section id="navbar">
     <nav class="navbar navbar-expand-md">
       <div class="container-fluid px-3">
-        <a class="navbar-brand" href="./index.html">
+        <a class="navbar-brand" href="/">
           <img src="../static/images/logo.png" alt="Quack">
           quack!
         </a>
@@ -99,16 +99,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="./.html">Lessons</a>
+              <a class="nav-link" href="/Lessons/">Lessons</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Notes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./CodeQuacker.html">CodeQuacker</a>
+              <a class="nav-link" href="/CodeQuacker/">CodeQuacker</a>
             </li>
             <li class="nav-item login card">
-              <a class="nav-link" href="./loginPage.html">Log In</a>
+              <a class="nav-link" href="/loginPage/">Log In</a>
             </li>
           </ul>
         </div>
