--- a/Quack/templates/Notesnew.html
+++ b/Quack/templates/Notesnew.html
@@ -79,9 +79,9 @@
   <section id="navbar">
     <nav class = "navbar navbar-expand-md">
       <div class = "container-fluid px-3">
-        <a id = "head" class = "navText navbar-brand" aria-current="page" href="./index.html">
+        <a id = "head" class = "navText navbar-brand" aria-current="page" href="/">
           <img class = "logo" src = "../static/images/logo.png" width = "60" height = "60" />
-          <a style = "text-decoration: none; color: black" href="./index.html">quack!</a>
+          <a style = "text-decoration: none; color: black" href="/">quack!</a>
         </a>
         <button id = "toggle" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class = "navbar-toggler-icon"> </span>
@@ -90,16 +90,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link align-content-center" href="../Locked Page/lockPage.html">lessons</a>
+              <a class="nav-link align-content-center" href="/Lessons/">lessons</a>
             </li>
             <li class="nav-item">
               <a class="nav-link align-content-center" href="#">notes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link align-content-center" href="./CodeQuacker.html">CodeQuacker</a>
+              <a class="nav-link align-content-center" href="/CodeQuacker/">CodeQuacker</a>
             </li>
             <li class = "login card container-fluid" style="background-color: #FFF0CE">
-              <a class="nav-link align-content-center" href="./loginPage.html" >log in</a>
+              <a class="nav-link align-content-center" href="/loginPage/" >log in</a>
             </li>
           </ul>
         </div>
