--- a/Quack/templates/createAccount.html
+++ b/Quack/templates/createAccount.html
@@ -110,9 +110,9 @@
         <!-- navbar-expand-md -->
     <nav class = "navbar fixed-top me-auto navbar-left">
     <div class = "container-fluid px-3">
-        <a id = "head" class = "navText navbar-brand" aria-current="page" href="../static/index.html">
+        <a id = "head" class = "navText navbar-brand" aria-current="page" href="/">
           <img class = "logo" src = "../static/images/logo.png" width = "60" height = "60" />
-          <a style = "text-decoration: none; color: black" href="../static/index.html">quack!</a>
+          <a style = "text-decoration: none; color: black" href="/">quack!</a>
         </a>
       </div>
     </nav>
@@ -135,7 +135,7 @@
 
         <!-- Login link -->
         <div class="login-link">
-            Already have an account? <a href="loginPage.html">Log in</a>
+            Already have an account? <a href="/loginPage/">Log in</a>
         </div>
     </div>
 </body>
