--- a/Quack/templates/index.html
+++ b/Quack/templates/index.html
@@ -157,7 +157,9 @@
   }
 
   div.section {
-    overflow: visible;
+    /* overflow: visible; */
+    height:fit-content;
+    
   }
 
   .slider__nav {
