--- a/Quack/templates/CodeQuacker.html
+++ b/Quack/templates/CodeQuacker.html
@@ -90,7 +90,7 @@
     <nav class="navbar navbar-expand-md">
       <div class="container-fluid px-3">
         <a class="navbar-brand" href="/">
-          <img src="../static/images/logo.png" alt="Quack">
+          <img src="../static/images/Ducky3.png" alt="Quack">
           quack!
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
