--- a/Quack/templates/Lessons.html
+++ b/Quack/templates/Lessons.html
@@ -255,7 +255,7 @@
     <nav class="navbar navbar-expand-md">
         <div class="container-fluid px-3">
             <a id="head" class="navText navbar-brand" aria-current="page" href="/">
-                <img class="logo" src="../static/images/logo.png" width="60" height="60" />
+                <img class="logo" src="../static/images/Ducky3.png" width="60" height="60" />
                 <a style="font-size: 20px; text-decoration: none; color: black" href="/">quack!</a>
             </a>
             <button id="toggle" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
