--- a/Quack/templates/CodeQuacker.html
+++ b/Quack/templates/CodeQuacker.html
@@ -144,7 +144,7 @@
     </div> -->
 
     <!-- Sound wave bar -->
-    <canvas id="sound-wave"></canvas>
+    <!-- <canvas id="sound-wave"></canvas> -->
   </section>
 
   <script src = "../javascript/app.js"></script>
