--- a/Quack/templates/index.html
+++ b/Quack/templates/index.html
@@ -208,7 +208,7 @@
               <a class="nav-link align-content-center" href="#">Notes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link align-content-center" href="/CodeQuaker/">CodeQuacker</a>
+              <a class="nav-link align-content-center" href="/CodeQuacker/">CodeQuacker</a>
             </li>
             <li class="login card container-fluid" style="background-color: #FFF0CE">
               <a class="nav-link align-content-center" href="/loginPage/">Log in</a>
